crates/weft-snapshots/tests/snapshots/a2ui-import/corpus-confirm-dialog.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: corpus-confirm-dialog as a2ui-import
---
<screen id="files" weft="0.3">
  <heading id="title" level="1">Quarterly report</heading>
  <button id="delete-file" on-press="dialog.open">Delete file</button>
  <dialog id="dialog-delete-file" label="Delete file?" modal="true">
    <stack id="confirm-content">
      <text id="warning">This cannot be undone.</text>
      <text id="filename" text="{$.file.name}"/>
      <button id="cancel" on-press="dialog.close">Cancel</button>
      <button id="confirm-delete" on-press="file.delete">Delete</button>
    </stack>
  </dialog>
</screen>
